# rag-pipeline-classic

./: .gitignore  README.md  pyproject.toml
apps/: api.py  config.py  embedding.py  generation.py  ingestion.py  reranker.py  retrival.py  testrag.py
docs/: ARCHITECTURE.md  architecture.drawio
